# Restock

./: .coverage  .gitignore  .pre-commit-config.yaml  5X_WORKSPACE_DEPLOYMENT.md  CUSTOMER_DATA_GUIDE.md  Changes.txt  DATA_VALIDATION_SYSTEM.md  IMPLEMENTATION_PHASES.md  LOGGING_STANDARDIZATION.md  MIGRATION_GUIDE.md  Makefile  NO_OUTLIER_OPTION_IMPLEMENTATION.md  OUTLIER_HANDLING_SIMPLIFICATION.md  PRODUCT_FILTERING_GUIDE.md  PROGRESS_TRACKING_GUIDE.md  QUICK_START_GUIDE.md  README.md  SEASONALITY_ANALYSIS_SUMMARY.md  SEASONALITY_FORECAST_CHART_IMPLEMENTATION.md  SNOWFLAKE_SETUP_GUIDE.md  ToFix.txt  UNIFIED_PIPELINE_REFACTOR.md  UV_SETUP_SUMMARY.md  VIRTUAL_ENVIRONMENT_CLEANUP.md  ZERO_EXCLUSION_IMPROVEMENT.md  comprehensive_validation_query.sql  env_template.txt  env_template_5x_workspace.txt  inventory_forecasting_architecture.md  pipeline_flow_diagram.txt  pyproject.toml  requirements.txt  run_backtesting.py  run_complete_forecasting_pipeline.py  run_complete_forecasting_pipeline_env.py  run_complete_workflow.py  run_customer_backtest.py  run_data_preprocessing.py  run_data_preprocessing_env.py  run_data_validation.py  (+13 more)
data/: __init__.py  example_usage.py  exceptions.py  input_data_prepper.py  loader.py  loader_env.py
data/access/: access_and_storage.py  base.py  csv_accessor.py  env_snowflake_accessor.py  env_snowflake_config.py  snowflake_accessor.py
data/config/: bhasin_snowflake_config.yaml  data_config.yaml  data_config_template.yaml  paths.py  prophet_parameters.json  regressor_config.yaml
data/customer_data/: customer_demand.csv  customer_product_master.csv  customer_product_master_full.csv
data/dummy/: demand_cleaned_daily_20250722_034721.csv  demand_cleaned_daily_20250722_035329.csv  demand_outliers_daily_20250722_035329.csv  generate_dummy_data.py  generate_product_master.py  product_master_daily.csv  sku_demand_daily.csv
data/holidays/: india_holidays.csv
data/regressors/: __init__.py  in_season.py  lead_lag_aggregation.py  recency.py  week_of_month.py
data/tests/: TEST_RESULTS_SUMMARY.md  comprehensive_test_summary.json  parallel_processing_report.json  performance_benchmark_report.json
docs/: API.md  HYPERPARAMETER_ANALYSIS.md  metrics_guide.md  runner_output_example.md
examples/: check_first_demand_dates.py  create_customer_product_master.py  create_simulation_plot.py  format_customer_data.py  run_aggregator_example.py  run_bucketing_validation.py  run_hyperparameter_analysis.py  run_prophet_backtest_filtered.py  run_tests.py  update_customer_product_master.py  update_product_master_for_prophet.py  validate_customer_data.py  visualization_example.py
forecaster/: __init__.py
forecaster/backtesting/: __init__.py  backtester.py  config.py  enhanced_backtester.py  full_backtesting_pipeline.py  hyperparameter_analyzer.py  unified_backtester.py
forecaster/data/: PR_consolidated_df copy.csv  __init__.py  aggregator.py  customer_demand.csv  customer_demand_backup.csv  customer_product_master.csv  customer_product_master_backup.csv  demand_validator.py  loader.py  product_master_schema.py  schema.py
forecaster/forecasting/: __init__.py  arima.py  base.py  core_engine.py  engine.py  moving_average.py  parameter_optimizer.py  prophet.py  prophet_backup.py  seasonality_analyzer.py
forecaster/insights/: __init__.py  demand_classification.py
forecaster/outlier/: __init__.py  detection.py  handler.py
forecaster/runner/: __init__.py  config.py  parallel.py  pipeline.py
forecaster/safety_stocks/: __init__.py  safety_stock_calculator.py  safety_stock_models.py
forecaster/simulation/: __init__.py  data_loader.py  order_policies.py  simulator.py
forecaster/utils/: __init__.py  (+6 more)
notebooks/: pipeline_run.ipynb
webapp/: README.md  __init__.py  app.py  app_backup.py  run.py
(+29 files in other folders)
